@@ -242,13 +242,14 @@ object ChartAxisFrame: TChartAxisFrame
         ClientWidth = 264
         TabOrder = 0
         object cbAutoMinMax: TCheckBox
+          AnchorSideLeft.Control = gbAxisRange
           AnchorSideTop.Side = asrBottom
-          Left = 16
+          Left = 10
           Height = 19
           Hint = 'Not available when scrolling is active'
           Top = 28
           Width = 76
-          BorderSpacing.Left = 16
+          BorderSpacing.Left = 10
           BorderSpacing.Top = 10
           Caption = 'Automatic'
           OnChange = cbAutoMinMaxChange
@@ -372,11 +373,11 @@ object ChartAxisFrame: TChartAxisFrame
         object cbLabelsVisible: TCheckBox
           AnchorSideLeft.Control = gbLabels
           AnchorSideTop.Control = gbLabels
-          Left = 16
+          Left = 10
           Height = 19
           Top = 2
           Width = 82
-          BorderSpacing.Left = 16
+          BorderSpacing.Left = 10
           BorderSpacing.Top = 2
           Caption = 'Show labels'
           OnChange = cbLabelsVisibleChange
@@ -389,11 +390,11 @@ object ChartAxisFrame: TChartAxisFrame
           AnchorSideTop.Side = asrBottom
           AnchorSideRight.Control = gbLabels
           AnchorSideRight.Side = asrBottom
-          Left = 111
+          Left = 105
           Height = 23
-          Hint = 'according to the Printf specification:'#13#10'https://en.wikipedia.org/wiki/Printf'
+          Hint = 'According to the Printf specification:'#13#10'https://en.wikipedia.org/wiki/Printf'
           Top = 27
-          Width = 133
+          Width = 139
           Anchors = [akTop, akLeft, akRight]
           BorderSpacing.Left = 50
           BorderSpacing.Top = 6
@@ -409,7 +410,7 @@ object ChartAxisFrame: TChartAxisFrame
           AnchorSideLeft.Control = cbLabelsVisible
           AnchorSideTop.Control = edLabelFormat
           AnchorSideTop.Side = asrCenter
-          Left = 16
+          Left = 10
           Height = 15
           Top = 31
           Width = 87
@@ -420,17 +421,16 @@ object ChartAxisFrame: TChartAxisFrame
           AnchorSideLeft.Control = edLabelFormat
           AnchorSideTop.Control = cbTimeFormat
           AnchorSideTop.Side = asrBottom
-          AnchorSideRight.Control = edLabelFormat
+          AnchorSideRight.Control = cbTimeFormat
           AnchorSideRight.Side = asrBottom
           AnchorSideBottom.Side = asrCenter
-          Left = 111
+          Left = 105
           Height = 23
           Top = 87
-          Width = 83
+          Width = 76
           Alignment = taRightJustify
           Anchors = [akTop, akLeft, akRight]
           BorderSpacing.Top = 6
-          BorderSpacing.Right = 50
           BorderSpacing.Bottom = 12
           MaxValue = 1000
           OnChange = seLabelDistanceChange
@@ -440,7 +440,7 @@ object ChartAxisFrame: TChartAxisFrame
           AnchorSideLeft.Control = lblPrecisionFormat
           AnchorSideTop.Control = seLabelDistance
           AnchorSideTop.Side = asrCenter
-          Left = 16
+          Left = 10
           Height = 15
           Top = 91
           Width = 45
@@ -454,11 +454,10 @@ object ChartAxisFrame: TChartAxisFrame
           AnchorSideTop.Side = asrBottom
           AnchorSideRight.Control = edLabelFormat
           AnchorSideRight.Side = asrBottom
-          Left = 111
+          Left = 105
           Height = 23
           Top = 58
-          Width = 133
-          Anchors = [akTop, akLeft, akRight]
+          Width = 76
           BorderSpacing.Top = 6
           ItemHeight = 15
           ItemIndex = 0
@@ -475,12 +474,31 @@ object ChartAxisFrame: TChartAxisFrame
           AnchorSideLeft.Control = cbLabelsVisible
           AnchorSideTop.Control = cbTimeFormat
           AnchorSideTop.Side = asrCenter
-          Left = 16
+          Left = 10
           Height = 15
           Top = 62
           Width = 65
           Caption = 'Time format'
           ParentColor = False
+        end
+        object cbTimeReformat: TCheckBox
+          AnchorSideLeft.Control = cbTimeFormat
+          AnchorSideLeft.Side = asrBottom
+          AnchorSideTop.Control = cbTimeFormat
+          AnchorSideRight.Control = edLabelFormat
+          AnchorSideRight.Side = asrBottom
+          Left = 187
+          Height = 19
+          Hint = 'Reformats the time to the'#13#10'format "day:hour:minute"'
+          Top = 59
+          Width = 59
+          BorderSpacing.Left = 6
+          BorderSpacing.Top = 1
+          Caption = '[d:h:m]'
+          OnChange = cbTimeReformatChange
+          ParentShowHint = False
+          ShowHint = True
+          TabOrder = 4
         end
       end
       object Bevel2: TBevel
