@@ -2,9 +2,10 @@ Changes
 
 from version 1.2.0 to 1.30
 
-improvement:
+improvements:
 - it is now possible to change the time format to [days:hours:minutes] by
   right-clicking in the chart and choosing the corresponding context menu entry
+- it is now also possible to set the time format in the x-axis dialog
 
 bugfixes:
 - port scan progress bar did not properly close after the scanning
